2019-1/231/users/4207/executions/1611_1802.log
== TEST (2019-03-27 11:09:17) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - dano

print(int(restante))
-- OUTPUT:
191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 11:09:31) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - dano

print(int(restante))
-- EXECUTION TIME:
0.19372
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
191
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
288
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:10:58) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= int(sqrt(raiz) + (pi*div))

restante = vida - dano

print(restante)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:11:04) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= int(sqrt(raiz) + (pi*div))

restante = vida - dano

print(restante)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 11:11:14) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= int(sqrt(raiz) + (pi*div))

restante = vida - dano

print(restante)
-- EXECUTION TIME:
0.155026
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:21:04) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - dano

print(restante)
-- OUTPUT:
191.48074671532063
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:21:17) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - (int)dano

print(restante)
-- ERROR:
File "XXXX", line 11
    restante = vida - (int)dano
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:21:30) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(restante)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 11:21:37) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(restante)
-- EXECUTION TIME:
0.135218
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:21:49) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(restante)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 11:22:02) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(restante)
-- EXECUTION TIME:
0.17278
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:37:44) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(restante)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 11:38:00) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(restante)
-- EXECUTION TIME:
0.194216
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:38:09) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(restante)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 11:38:21) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(restante)
-- EXECUTION TIME:
0.204793
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 11:39:00) 
-- CODE:
from math import*

vida= float(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(restante)
-- EXECUTION TIME:
0.153684
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:39:11) 
-- CODE:
from math import*

vida= float(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = int(vida) - int(dano)

print(restante)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 11:39:28) 
-- CODE:
from math import*

vida= float(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = int(vida) - int(dano)

print(restante)
-- EXECUTION TIME:
0.254968
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:19:28) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

int(restante) = vida - (dano)

print(restante)
-- ERROR:
File "XXXX", line 11
    int(restante) = vida - (dano)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:20:32) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = int(vida) - int(dano)

print(restante)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:20:48) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = int(vida) - int(dano)

print(restante)
-- EXECUTION TIME:
0.144154
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:20:57) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = (vida) - int(dano)

print(restante)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:21:13) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = (vida) - (dano)

print(restante)
-- OUTPUT:
191.48074671532063
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:22:19) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(restante)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:22:33) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(restante)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:22:41) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(restante)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:22:44) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(restante)
-- EXECUTION TIME:
0.152387
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:18:12) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(restante)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 18:18:21) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(restante)
-- EXECUTION TIME:
0.156647
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:20:37) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(int(restante))
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 18:20:47) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(int(restante))
-- EXECUTION TIME:
0.156572
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:50:58) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(int(restante))
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:51:05) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(int(restante))
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 18:51:13) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)

restante = vida - int(dano)

print(int(restante))
-- EXECUTION TIME:
0.171937
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:12:57) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
print(dano= sqrt(raiz) + (pi*div))

#restante = vida - int(dano)

#print(int(restante))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(dano= sqrt(raiz) + (pi*div))
TypeError: 'dano' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:13:24) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)
print(dano)

#restante = vida - int(dano)

#print(int(restante))
-- OUTPUT:
8.519253284679376
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:14:30) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)
restante = vida - dano
print(dano)

#restante = vida - int(dano)

#print(int(restante))
-- OUTPUT:
8.519253284679376
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:14:47) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)
restante = vida - dano
print(dano)
print(restante)

#restante = vida - int(dano)

#print(int(restante))
-- OUTPUT:
8.519253284679376
191.48074671532063
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:15:12) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)
restante = vida - int(dano)
print(dano)
print(restante)

#restante = vida - int(dano)

#print(int(restante))
-- OUTPUT:
8.519253284679376
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:15:23) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)
restante = vida - int(dano)
#print(dano)
print(restante)

#restante = vida - int(dano)

#print(int(restante))
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 19:15:32) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)
restante = vida - int(dano)
#print(dano)
print(restante)

#restante = vida - int(dano)

#print(int(restante))
-- EXECUTION TIME:
0.166031
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:42:23) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)
restante = vida - int(dano)
#print(dano)
print(restante)

#restante = vida - int(dano)

#print(int(restante))
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 20:43:13) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)
restante = vida - int(dano)
#print(dano)
print(restante)

#restante = vida - int(dano)

#print(int(restante))
-- EXECUTION TIME:
0.147291
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:48:05) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(5*d1) + (pi*d2/3)
restante = vida - int(sqrt(5*d1) + (pi*d2/3))
#print(dano)
print(vida - int(sqrt(5*d1) + (pi*d2/3)))

#restante = vida - int(dano)

#print(int(restante))
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 20:48:18) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(5*d1) + (pi*d2/3)
restante = vida - int(sqrt(5*d1) + (pi*d2/3))
#print(dano)
print(vida - int(sqrt(5*d1) + (pi*d2/3)))

#restante = vida - int(dano)

#print(int(restante))
-- EXECUTION TIME:
0.131591
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:48:25) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(5*d1) + (pi*d2/3)
restante = vida - int(sqrt(5*d1) + (pi*d2/3))

print(vida - int(sqrt(5*d1) + (pi*d2/3)))

-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 20:48:31) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(5*d1) + (pi*d2/3)
restante = vida - int(sqrt(5*d1) + (pi*d2/3))

print(vida - int(sqrt(5*d1) + (pi*d2/3)))

-- EXECUTION TIME:
0.145897
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:48:33) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(5*d1) + (pi*d2/3)
restante = vida - int(sqrt(5*d1) + (pi*d2/3))

print(vida - int(sqrt(5*d1) + (pi*d2/3)))

-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 20:49:27) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d2= int(input("Digite o valor do dado 1: "))
d1= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(5*d1) + (pi*d2/3)
restante = vida - int(sqrt(5*d1) + (pi*d2/3))

print(vida - int(sqrt(5*d1) + (pi*d2/3)))

-- EXECUTION TIME:
0.228073
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
194
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 20:49:34) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(5*d1) + (pi*d2/3)
restante = vida - int(sqrt(5*d1) + (pi*d2/3))

print(vida - int(sqrt(5*d1) + (pi*d2/3)))

-- EXECUTION TIME:
0.122531
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 20:50:20) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(5*d1) + (pi*d2/3)
restante = vida - int(sqrt(5*d1) + (pi*d2/3))

print(vida - int([sqrt(5*d1) + (pi*d2/3)]))

-- EXECUTION TIME:
0.180752
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1611/1802/main.py", line 12, in <module>
    print(vida - int([sqrt(5*d1) + (pi*d2/3)]))
TypeError: int() argument must be a string or a number, not 'list'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:17:49) 
-- CODE:
from math import*

vida= float(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)
restante = vida - int(dano)
#print(dano)
print(restante)

#restante = vida - int(dano)

#print(int(restante))
-- OUTPUT:
192.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:18:13) 
-- CODE:
from math import*

vida= float(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)
restante = vida - int(dano)
#print(dano)
print(int(restante))

#restante = vida - int(dano)

#print(int(restante))
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:18:19) 
-- CODE:
from math import*

vida= float(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)
restante = vida - int(dano)
#print(dano)
print(int(restante))

#restante = vida - int(dano)

#print(int(restante))
-- EXECUTION TIME:
0.118476
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:18:25) 
-- CODE:
from math import*

vida= float(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)
restante = vida - int(dano)
#print(dano)
print(restante)

#restante = vida - int(dano)

#print(int(restante))
-- OUTPUT:
192.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:18:32) 
-- CODE:
from math import*

vida= float(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3
dano= sqrt(raiz) + (pi*div)
restante = vida - int(dano)
#print(dano)
print(restante)

#restante = vida - int(dano)

#print(int(restante))
-- EXECUTION TIME:
0.144233
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:19:47) 
-- CODE:
from math import*

vida= float(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3

dano= sqrt(raiz) + (pi**div)
restante = vida - int(dano)
#print(dano)
print(restante)

#restante = vida - int(dano)

#print(int(restante))
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:19:58) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3

dano= sqrt(raiz) + (pi**div)
restante = vida - int(dano)
#print(dano)
print(restante)

#restante = vida - int(dano)

#print(int(restante))
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:20:03) 
-- CODE:
from math import*

vida= int(input("Digite o valor da vida do monstro: "))
d1= int(input("Digite o valor do dado 1: "))
d2= int(input("Digite o valor do dado 2: "))

raiz= 5*d1 
div= d2/3

dano= sqrt(raiz) + (pi**div)
restante = vida - int(dano)
#print(dano)
print(restante)

#restante = vida - int(dano)

#print(int(restante))
-- EXECUTION TIME:
0.149229
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
